2004-01-19  Ryan Nunn  <colourles@users.sourceforge.net>
	* actors.h : Added get_sexed_coloured_shape() for fixing paperdolls and 
	  face stats always having white skin colour in serpent bond mode.
	* gumps/Paperdoll_gump.cc, gumps/Face_button.cc : Fixing serpent bond 
	  bug
	* files/utils.* : Made U7exists() return type bool.

2004-01-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapeid.cc: don't corrupt game palette to get special colours
	* palette.*, various: replaced update() by apply(false)

2004-01-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.*: added Game::has_expansion() to check for FoV/SS
	* objnames.cc: fixed SI-without-SS object names
	* files/utils.cc: made U7remove() case-insensitive
	* various: cleaning up output
	* CombatOptions_gump.cc: made buttons wide enough for text
	* various: added config/debug/trace/combat option to enable combat msgs

2004-01-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: fix check for original gamedat
	* various: cleaned up some output

2004-01-17  Ryan Nunn  <colourles@users.sourceforge.net>
	* audio/midi_drivers/fmopldrv.cc : 'Fixing' hanging note problem

2004-01-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* files/utils.cc: make sure path_map contains no invalid/empty entries
	* audio/Audio.cc: use Mix_GetError after Mix_OpenAudio
	* fmopldrv.cc: don't crash if u7voice.flx not found
	* exult.cc: always load BG/SI paths
	* shapeid.cc: use SERPENTISLE_STATIC instead of SERPENT_STATIC

2004-01-10    <jeff@mini.nerble.net>

	* gamemap.cc: create_ifix_object() added to create the right type
	of object.
	* files/utils.cc: Clone_system_path should check that entry
	exists.
	* exult.cc: Always set <PATCH>, defaulting to datadir/patch.

2004-01-06    <jeff@mini.nerble.net>

	* usecode/intrinsics.cc: Yet another intrinsic:  set_barge_dir().

2004-01-03    <jeff@mini.nerble.net>
